# Computer_Graphics

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  TODO.md  structure.md
include/: AudioSource.h  Camera.h  LightScene.h  MainScene.h  Mat4.h  Mesh.h  Model.h  Scene.h  SceneManager.h  Shader.h  ShaderManager.h  Skybox.h  SkyboxManager.h  Sound.h  SoundManager.h  Sphere.h  TextureLoader.h  UBO.h  UIHelpers.h  tiny_obj_loader.h
models/: map-bump.mtl
shaders/: lambert.frag  lambert.vert  metal.frag  metal.vert  phong.frag  phong.vert  simple_color.frag  simple_color.vert  skybox.vert  sun.frag  sun.vert  textured.frag  textured.vert
src/: AudioSource.cpp  Camera.cpp  LightScene.cpp  MainScene.cpp  Mat4.cpp  Mesh.cpp  Model.cpp  SceneManager.cpp  Shader.cpp  ShaderManager.cpp  Skybox.cpp  SkyboxManager.cpp  Sound.cpp  SoundManager.cpp  Sphere.cpp  TextureLoader.cpp  UBO.cpp  UIHelpers.cpp  UIHelpers.h  main.cpp
